--- a/src/app/kanban/kanban-add/kanban-add.component.html
+++ b/src/app/kanban/kanban-add/kanban-add.component.html
@@ -166,8 +166,8 @@
                                         fill="currentColor" />
                                 </svg>
                             </button>
-                            <button class="create-task" [disabled]="!addTaskForm.valid"
-                                (click)="boardService.addTasks(taskList); boardService.taskConfirmation()">
+                            <button class="create-task" 
+                                (click)="boardService.addTasks(taskList)">
                                 Create Task
                                 <img src="assets/img/add-contacts/check.svg" alt="Create Task" />
                             </button>
@@ -181,4 +181,5 @@
         </section>
     </div>
 </div>
+<div class="createdTask" > <p>Task added to board </p><img src="assets/img/kanban-board/taskAddedIcon.png"></div>
 <app-nav-footer-mobile></app-nav-footer-mobile>
