--- a/src/app/kanban/kanban-add/kanban-add.component.scss
+++ b/src/app/kanban/kanban-add/kanban-add.component.scss
@@ -67,6 +67,16 @@
                                 font-size: 12px;
                                 color: red;
                             }
+                            .form-label {
+                                font-size: 1.6em;
+                                @media(max-width:750px){
+                                    display: none;
+                                }
+                                .required-asterisk {
+                                    color: red;
+                                    margin-right: 1em;
+                                }
+                            }
                             .without-required {
                                 display: flex;
                                 flex-direction: column;
@@ -211,6 +221,14 @@
                             .assigned-span {
                                 font-size: 1.6em;
                             }
+                            .form-label{
+                                display: none;
+                                @media(max-width: 750px){
+                                    display: block;
+                                    margin-top: 5em;
+                                    margin-bottom: 2em;
+                                }
+                            }
                             .all-user-container {
                                 width: 100%;
                                 mat-select {
@@ -319,7 +337,6 @@
                                 margin-bottom: 5em;
                                 margin-top: 2em;
                             }
-
                             .clear {
                                 display: flex;
                                 justify-content: center;
@@ -330,18 +347,15 @@
                                 font-size: 1.8em;
                                 padding: 8px 10px;
                                 transition: box-shadow 0.3s ease;
-
                                 img {
                                     margin-left: 0.5em;
                                 }
-
                                 &:hover {
                                     color: #29abe2;
                                     border: 2px #29abe2 solid;
                                     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
                                 }
                             }
-
                             .create-task {
                                 color: white;
                                 display: flex;
@@ -353,11 +367,9 @@
                                 font-size: 1.8em;
                                 padding: 10px 18px;
                                 transition: box-shadow 0.3s ease;
-
                                 img {
                                     margin-left: 0.5em;
                                 }
-
                                 &:hover {
                                     background-color: #29abe2;
                                     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
@@ -365,101 +377,7 @@
                             }
                         }
                     }
-                    // -------- Other Components ----------
-                    .contact-list-component {
-                        display: flex;
-                        height: 90%;
-                        @media (max-width: 750px) {
-                            width: 100%;
-                        }
-                        .info-screen-component {
-                            height: auto;
-                            width: 100%;
-                            @media (max-width: 750px) {
-                                display: none;
-                            }
-                        }
-                        .app-info-screen-mobile-component {
-                            width: 100%;
-                            @media (min-width: 750px) {
-                                display: none;
-                            }
-                        }
-                        input[type="number"]::-webkit-inner-spin-button,
-                        input[type="number"]::-webkit-outer-spin-button {
-                            -webkit-appearance: none;
-                            margin: 0;
-                        }
-                        input[type="number"] {
-                            appearance: textfield;
-                        }
-                        .createdContact {
-                            z-index: 4;
-                            width: 15em;
-                            height: 4em;
-                            position: fixed;
-                            top: 80%;
-                            left: 50%;
-                            transform: translate(-50%, -50%);
-                            display: none;
-                            justify-content: center;
-                            align-items: center;
-                            font-size: 16px;
-                            border-radius: 14px;
-                            border: 1px solid black;
-                            background-color: #2a3647;
-                            color: white;
-                            box-shadow: 0 4px 0 rgba(0, 0, 0, 0.15);
-                            animation: fade-in-left-overlay-viewport 2s ease-in-out;
-                        }
-                        .display {
-                            display: flex;
-                        }
-                        input[type="number"] {
-                            appearance: textfield;
-                        }
-                        .createdContact {
-                            z-index: 4;
-                            width: 15em;
-                            height: 4em;
-                            position: fixed;
-                            top: 80%;
-                            left: 50%;
-                            transform: translate(-50%, -50%);
-                            display: none;
-                            justify-content: center;
-                            align-items: center;
-                            font-size: 16px;
-                            border-radius: 14px;
-                            border: 1px solid black;
-                            background-color: #2a3647;
-                            color: white;
-                            box-shadow: 0 4px 0 rgba(0, 0, 0, 0.15);
-                            animation: fade-in-left-overlay-viewport 2s ease-in-out;
-                        }
-                        .display {
-                            display: flex;
-                        }
-                        .createdContact {
-                            z-index: 4;
-                            width: 15em;
-                            height: 4em;
-                            position: fixed;
-                            top: 80%;
-                            left: 50%;
-                            transform: translate(-50%, -50%);
-                            display: none;
-                            justify-content: center;
-                            align-items: center;
-                            font-size: 16px;
-                            border-radius: 14px;
-                            border: 1px solid black;
-                            background-color: #2a3647;
-                            color: white;
-                            box-shadow: 0 4px 0 rgba(0, 0, 0, 0.15);
-                            animation: fade-in-left-overlay-viewport 2s ease-in-out;
-                        }
-                    }
+                }
                 }
                 .user-feedback {
                     z-index: 4;
@@ -474,6 +392,28 @@
             }
         }
     }
+
+.createdTask {
+    z-index: 4;
+    width: 15em;
+    height: 4em;
+    position: fixed;
+    top: 50%;
+    left: 55%;
+    transform: translate(-50%, -50%);
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    display: none;
+    border-radius: 14px;
+    border: 1px solid black;
+    background-color: #2a3647;
+    color: white;
+    box-shadow: 0 4px 0 rgba(0, 0, 0, 0.15);
+    animation: fade-in-left-overlay-viewport 2s ease-in-out;
+}
+.display {
+    display: flex;
 }
 //===========================  multiple uses Css Part  ==================================
 .errorborder {
@@ -495,73 +435,3 @@
     color: red;
 }
 //========================================================================================
-// KEINE AHNUNG WAS DAS IST 
-.KEINE_AHNUNG_WAS_DAS_IST {
-    width: 100%;
-        // -------- Other Components ----------
-// .contact-list-content {
-//     display: flex;
-//     height: 90%;
-// }
-
-// .contact-list-component {
-//     display: flex;
-//     height: auto;
-
-//     @media (max-width: 750px) {
-//         width: 100%;
-//     }
-
-//     @media (min-width: 750px) {
-//         display: flex;
-//         justify-content: flex-end;
-//         margin-top: 5em;
-//         gap: 1.5em;
-//         margin-bottom: 2em;
-
-//         .clear {
-//             display: flex;
-//             justify-content: center;
-//             align-items: center;
-//             background-color: transparent;
-//             border: solid rgba(0, 0, 0, 0.049) 2px;
-//             border-radius: 10px;
-//             font-size: 1.8em;
-//             padding: 8px 10px;
-//             transition: box-shadow 0.3s ease;
-
-//             img {
-//                 margin-left: 0.5em;
-//             }
-
-//             &:hover {
-//                 color: #29abe2;
-//                 border: 2px #29abe2 solid;
-//                 box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-//             }
-//         }
-
-//         .create-task {
-//             color: white;
-//             display: flex;
-//             justify-content: center;
-//             align-items: center;
-//             background-color: #2a3647;
-//             border: solid rgba(0, 0, 0, 0.049) 2px;
-//             border-radius: 10px;
-//             font-size: 1.8em;
-//             padding: 10px 18px;
-//             transition: box-shadow 0.3s ease;
-
-//             img {
-//                 margin-left: 0.5em;
-//             }
-
-//             &:hover {
-//                 background-color: #29abe2;
-//                 box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-//             }
-//         }
-//     }
-// }
-}
