--- a/src/app/kanban/kanban-add/kanban-add.component.scss
+++ b/src/app/kanban/kanban-add/kanban-add.component.scss
@@ -221,13 +221,26 @@
                             .assigned-span {
                                 font-size: 1.6em;
                             }
-                            .form-label{
+                            .form-label-category{
+                                display: flex;
+                                font-size: 1.6em;
+                                .required-asterisk {
+                                        color: red;
+                                        margin-right: 1em;
+                                    }
+                            }
+                            .form-label-mobile{
                                 display: none;
-                                @media(max-width: 750px){
-                                    display: block;
-                                    margin-top: 5em;
+                                font-size: 1.6em;
+                                @media(max-width:750px){
+                                    display: flex;
+                                    margin-top: 3em;
                                     margin-bottom: 2em;
                                 }
+                                .required-asterisk {
+                                        color: red;
+                                        margin-right: 1em;
+                                    }
                             }
                             .all-user-container {
                                 width: 100%;
@@ -272,6 +285,13 @@
                                 }
                                 &:focus {
                                     border: 1px #29abe2 solid;
+                                }
+                                .form-label {
+                                    font-size: 1.6em;
+                                    .required-asterisk {
+                                        color: red;
+                                        margin-right: 1em;
+                                    }
                                 }
                             }
                             }
