--- a/src/app/kanban-add-overlay/kanban-add-overlay.component.scss
+++ b/src/app/kanban-add-overlay/kanban-add-overlay.component.scss
@@ -591,17 +591,6 @@ input[type="number"] {
     }
 }
 
-.select-initials {
-    width: 2em;
-    height: 2em;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 1em;
-    margin-right: 1em;
-    color: white;
-}
-
 .errorborder {
     border: 2px solid red !important;
 }
@@ -610,4 +599,29 @@ input[type="number"] {
     height: 12px;
     font-size: 12px;
     color: red;
+}
+
+.already-assigned {
+    height: 2em;
+
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 0.5em;
+    padding: 0.5em;
+
+    .select-initials {
+        width: 2em;
+        height: 2em;
+        font-size: 1.6em;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 1em;
+        color: white;
+    }
+
+    .more-users {
+        font-size: 16px;
+    }
 }
