Enable create task button regardless of form validity
Removed the [disabled] binding from the 'Create Task' button in the template, allowing it to be clicked even if the form is invalid. Updated the component to use ViewChild for form reference and improved the resetForm method to reset the form and related fields.

--- a/src/app/kanban-add-overlay/kanban-add-overlay.component.html
+++ b/src/app/kanban-add-overlay/kanban-add-overlay.component.html
@@ -164,7 +164,7 @@
 										fill="currentColor" />
 								</svg>
 							</button>
-							<button class="create-task" [disabled]="!addTaskForm.valid"
+							<button class="create-task" 
 								(click)="boardService.addTasks(taskList); boardService.taskConfirmation()">
 								Create Task
 								<img src="assets/img/add-contacts/check.svg" alt="Create Task" />
