feat: form validation done

--- a/src/app/kanban/kanban-add/kanban-add.component.html
+++ b/src/app/kanban/kanban-add/kanban-add.component.html
@@ -179,10 +179,10 @@
                                         fill="currentColor" />
                                 </svg>
                             </button>
-                            <button class="create-task" (click)="boardService.addTasks(taskList)" >
-                                Create Task
-                                <img src="assets/img/add-contacts/check.svg" alt="Create Task" />
-                            </button>
+<button class="create-task" (click)="onSubmit()">
+    Create Task
+    <img src="assets/img/add-contacts/check.svg" alt="Create Task" />
+</button>
                         </div>
                     </div>
                 </div>
