--- a/src/app/kanban-add-overlay/kanban-add-overlay.component.html
+++ b/src/app/kanban-add-overlay/kanban-add-overlay.component.html
@@ -164,11 +164,10 @@
 										fill="currentColor" />
 								</svg>
 							</button>
-							<button class="create-task" 
-								(click)="boardService.addTasks(taskList); boardService.taskConfirmation()">
-								Create Task
-								<img src="assets/img/add-contacts/check.svg" alt="Create Task" />
-							</button>
+<button class="create-task" (click)="onSubmit()">
+    Create Task
+    <img src="assets/img/add-contacts/check.svg" alt="Create Task" />
+</button>
 						</div>
 					</div>
 				</div>
