--- a/src/app/kanban/kanban-add/kanban-add.component.html
+++ b/src/app/kanban/kanban-add/kanban-add.component.html
@@ -168,8 +168,37 @@
                                     required</label>
                             </div>
                         </div>
+
+
+                        						<div class="each-sub-task">
+							@for (pushedSubtask of taskList.subTaskFillTest; track $index) {
+
+<!-- 							@if (editingSubtaskIndex === $index) {
+							<li (click)="$event.stopPropagation()">
+								<textarea [(ngModel)]="pushedSubtask.text"></textarea>
+								<button (click)="spliceSubtask()">x
+
+								</button>
+							</li>
+							}@else {
+							<li (dblclick)="startEditingSubtask($index)">
+								{{ pushedSubtask.text }}
+							</li>
+							} -->
+							
+							
+							<li (click)="$event.stopPropagation()">
+								<textarea [(ngModel)]="pushedSubtask.text"></textarea>
+								<button (click)="$event.stopPropagation(); spliceSubtask()">x
+								</button>
+							</li> 
+							}
+
+						</div>
+
+
                         <!-- each-sub-task -->
-                        <div class="each-sub-task">
+                        <div class="each-sub-task-container">
                             <button class="clear" (click)="resetForm()">
                                 Clear
                                 <svg width="32" height="32" viewBox="0 0 32 32" fill="currentColor"
