subtask edit and delete logik
add subtask edit and delete logik

--- a/src/app/kanban-add-overlay/kanban-add-overlay.component.html
+++ b/src/app/kanban-add-overlay/kanban-add-overlay.component.html
@@ -157,9 +157,12 @@
 						<div class="each-sub-task">
 							@for (pushedSubtask of taskList.subTaskFillTest; track $index) {
 
-<!-- 							@if (editingSubtaskIndex === $index) {
+							@if (editingSubtaskIndex === $index) {
 							<li (click)="$event.stopPropagation()">
 								<textarea [(ngModel)]="pushedSubtask.text"></textarea>
+								<button (click)="saveEditingSubtask($index); $event.stopPropagation()">
+									s
+                                </button>
 								<button (click)="spliceSubtask()">x
 
 								</button>
@@ -168,14 +171,14 @@
 							<li (dblclick)="startEditingSubtask($index)">
 								{{ pushedSubtask.text }}
 							</li>
-							} -->
+							}
 							
 							
-							<li (click)="$event.stopPropagation()">
+							<!-- <li (click)="$event.stopPropagation()">
 								<textarea [(ngModel)]="pushedSubtask.text"></textarea>
 								<button (click)="$event.stopPropagation(); spliceSubtask()">x
 								</button>
-							</li> 
+							</li>  -->
 							}
 
 						</div>
