--- a/src/app/kanban/kanban-add/kanban-add.component.html
+++ b/src/app/kanban/kanban-add/kanban-add.component.html
@@ -170,29 +170,32 @@
                         </div>
 
 
-                        						<div class="each-sub-task">
+                        <div class="each-sub-task">
 							@for (pushedSubtask of taskList.subTaskFillTest; track $index) {
 
-<!-- 							@if (editingSubtaskIndex === $index) {
+							@if (editingSubtaskIndex === $index) {
 							<li (click)="$event.stopPropagation()">
 								<textarea [(ngModel)]="pushedSubtask.text"></textarea>
-								<button (click)="spliceSubtask()">x
-
+                                <button (click)="spliceSubtask()">
+                                    <img src="assets/img/kanban-add/subTaskDeleteButton.png" alt="delete">
 								</button>
+								<button (click)="saveEditingSubtask($index); $event.stopPropagation()">
+									<img src="assets/img/kanban-add/checkmark-subtask.svg" alt="">
+                                </button>
 							</li>
 							}@else {
 							<li (dblclick)="startEditingSubtask($index)">
 								{{ pushedSubtask.text }}
 							</li>
-							} -->
+							}}
 							
 							
-							<li (click)="$event.stopPropagation()">
+							<!-- <li (click)="$event.stopPropagation()">
 								<textarea [(ngModel)]="pushedSubtask.text"></textarea>
 								<button (click)="$event.stopPropagation(); spliceSubtask()">x
 								</button>
 							</li> 
-							}
+							} -->
 
 						</div>
 
