--- a/src/app/kanban/kanban-add/kanban-add.component.scss
+++ b/src/app/kanban/kanban-add/kanban-add.component.scss
@@ -424,6 +424,29 @@
                             }
                         }
 
+                        .each-sub-task {
+                            font-size: 1.6em;
+
+                            button {
+                                border: none;
+                                background: rgba(0, 0, 0, 0);
+                                border-bottom: 2px solid #29ABE2;
+                            }
+
+                            img {
+                                width: 1.8em;
+                                height: 1.8em;
+                                margin-right: 0.3em;
+                                padding: 0.1em;
+
+                                &:hover {
+                                    cursor: pointer;
+                                    border-radius: 50%;
+                                    background-color: rgba(0, 0, 0, 0.091);
+                                }
+                            }
+                        }
+
                         .each-sub-task-container {
                             display: flex;
                             justify-content: flex-end;
