subtask button images and alternate save img
added subtask button images and alternate save img text

--- a/src/app/kanban/kanban-add/kanban-add.component.html
+++ b/src/app/kanban/kanban-add/kanban-add.component.html
@@ -180,7 +180,7 @@
                                     <img src="assets/img/kanban-add/subTaskDeleteButton.png" alt="delete">
 								</button>
 								<button (click)="saveEditingSubtask($index); $event.stopPropagation()">
-									<img src="assets/img/kanban-add/checkmark-subtask.svg" alt="">
+									<img src="assets/img/kanban-add/checkmark-subtask.svg" alt="save">
                                 </button>
 							</li>
 							}@else {
