--- a/src/app/kanban/kanban-edit/kanban-edit.component.scss
+++ b/src/app/kanban/kanban-edit/kanban-edit.component.scss
@@ -30,9 +30,10 @@
             right: 4em;
             height: 3em;
             width: 3em;
-            @media(max-width:430px){
+
+            @media(max-width:430px) {
                 top: 2em;
-            right: 2em;
+                right: 2em;
             }
 
             &:hover {
@@ -47,9 +48,11 @@
             padding: 48px 40px 48px 40px;
             width: 100%;
             top: 3em;
-            @media(max-width: 430px){
+
+            @media(max-width: 430px) {
                 padding: 28px 20px 28px 20px
             }
+
             //             @media(max-width: 380px){
             //     padding: 18px 10px 18px 10px
             // }
@@ -60,17 +63,19 @@
                 align-items: center;
                 overflow-y: auto;
                 height: 88%;
-                scrollbar-width: thin;           
-                scrollbar-color: #bdbdbd #f5f5f5; 
+                scrollbar-width: thin;
+                scrollbar-color: #bdbdbd #f5f5f5;
 
                 &::-webkit-scrollbar {
-                    width: 6px;                  
+                    width: 6px;
                     background: #f5f5f5;
                 }
+
                 &::-webkit-scrollbar-thumb {
                     background: #bdbdbd;
                     border-radius: 6px;
                 }
+
                 &::-webkit-scrollbar-thumb:hover {
                     background: #888;
                 }
@@ -156,9 +161,11 @@
                             font-size: 20px;
                             padding: 10px 16px;
                             transition: box-shadow 0.3s ease;
-                            @media(max-width: 540px){
+
+                            @media(max-width: 540px) {
                                 font-size: 0px;
                             }
+
                             &:hover {
                                 box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
                             }
@@ -283,6 +290,7 @@
                                 background-color: transparent;
                                 border: transparent;
                             }
+
                             .grey-line {
                                 width: 2px;
                                 height: 24px;
@@ -291,8 +299,29 @@
                             }
                         }
                     }
+                }
 
+                .each-sub-task {
+                    font-size: 1.6em;
 
+                    button {
+                        border: none;
+                        background: rgba(0, 0, 0, 0);
+                        border-bottom: 2px solid #29ABE2;
+                    }
+
+                    img {
+                        width: 1.8em;
+                        height: 1.8em;
+                        margin-right: 0.3em;
+                        padding: 0.1em;
+
+                        &:hover {
+                            cursor: pointer;
+                            border-radius: 50%;
+                            background-color: rgba(0, 0, 0, 0.091);
+                        }
+                    }
                 }
             }
 
@@ -361,30 +390,31 @@
     width: 100%;
     flex-direction: row;
     align-items: center;
-}                    
+}
+
 .each-sub-task {
-                        padding-top: 2em;
+    padding-top: 2em;
 
-                        li {
-                            font-size: 16px;
-                        }
+    li {
+        font-size: 16px;
+    }
 
-                        textarea {
-                            height: 25px;
-                            width: calc(100% - 5em); 
-                            background: transparent;
-                            border: none;
-                            border-bottom: 2px solid #29ABE2;
-                            resize: none;
-                            font-size: 16px;
-                            color: #333;
-                            outline: none;
-                            margin-top: 1em; 
-                            padding-bottom: 4px; 
-                            vertical-align: bottom; 
+    textarea {
+        height: 25px;
+        width: calc(100% - 5em);
+        background: transparent;
+        border: none;
+        border-bottom: 2px solid #29ABE2;
+        resize: none;
+        font-size: 16px;
+        color: #333;
+        outline: none;
+        margin-top: 1em;
+        padding-bottom: 4px;
+        vertical-align: bottom;
 
-                            &:focus {
-                                border-bottom: 2px solid #29ABE2;
-                            }
-                        }
-                    }
+        &:focus {
+            border-bottom: 2px solid #29ABE2;
+        }
+    }
+}
