fixed height of edit subtask textarea

--- a/src/app/kanban-add-overlay/kanban-add-overlay.component.scss
+++ b/src/app/kanban-add-overlay/kanban-add-overlay.component.scss
@@ -404,7 +404,9 @@ section {
         }
 
         .each-sub-task {
-            font-size: 1.6em;
+            textarea {
+                height: 1.6em;
+            }
 
             button {
                 border: none;
