--- a/src/app/kanban/kanban-add/kanban-add.component.scss
+++ b/src/app/kanban/kanban-add/kanban-add.component.scss
@@ -425,7 +425,9 @@
                         }
 
                         .each-sub-task {
-                            font-size: 1.6em;
+                            textarea {
+                                height: 1.6em;
+                            }
 
                             button {
                                 border: none;
