--- a/src/app/kanban-add-overlay/kanban-add-overlay.component.scss
+++ b/src/app/kanban-add-overlay/kanban-add-overlay.component.scss
@@ -404,6 +404,11 @@ section {
         }
 
         .each-sub-task {
+            border: solid rgba(0, 0, 0, 0.049) 2px;
+            padding: 1em 2em;
+            border-radius: 1.5em;
+            margin: 1em 0;
+
             textarea {
                 height: 1.6em;
             }
