--- a/src/app/kanban/kanban-edit/kanban-edit.component.scss
+++ b/src/app/kanban/kanban-edit/kanban-edit.component.scss
@@ -302,6 +302,11 @@
                 }
 
                 .each-sub-task {
+                    border: solid rgba(0, 0, 0, 0.049) 2px;
+                    padding: 1em 2em;
+                    border-radius: 1.5em;
+                    margin: 1em 0;
+
                     textarea {
                         height: 1.6em;
                     }
