--- a/src/app/kanban/kanban-edit/kanban-edit.component.html
+++ b/src/app/kanban/kanban-edit/kanban-edit.component.html
@@ -72,9 +72,16 @@
                             } 
                         </mat-select>
                     </div>
-                    <div class="already-assigned">@for (assigned of task.assignedTo; track $index) {
-                    <div id={{$index}} class="select-initials" [style.background]="assigned.color">{{assigned.initials}}</div>              
-                    }</div>
+                    <div class="already-assigned">
+                        @for (assigned of task.assignedTo?.slice(0, 3) || [];; track $index) {
+						<div id={{$index}} class="select-initials" [style.background]="assigned.color">
+							{{assigned.initials}}
+						</div>
+						}
+						@if ((task.assignedTo?.length || 0) > 3) {
+						<div class="more-users">+{{ (task.assignedTo?.length || 0) - 3 }}</div>
+						}
+                    </div>
                 </div>
 
                 <div class="kanban-overlay-subtask">
