--- a/src/app/kanban/kanban-edit/kanban-edit.component.scss
+++ b/src/app/kanban/kanban-edit/kanban-edit.component.scss
@@ -185,6 +185,7 @@
 
                     .already-assigned {
                         display: flex;
+                        align-items: center;
                         flex-wrap: wrap;
                         gap: 0.5em;
                         padding: 0.5em;
@@ -198,6 +199,10 @@
                             justify-content: center;
                             border-radius: 1em;
                             color: white;
+                        }
+
+                        .more-users {
+                            font-size: 1.6em;
                         }
                     }
 
