--- a/src/app/kanban/kanban-edit/kanban-edit.component.scss
+++ b/src/app/kanban/kanban-edit/kanban-edit.component.scss
@@ -235,7 +235,10 @@
 
                         }
                     }
+
                 }
+
+
 
                 .kanban-overlay-subtask {
                     width: 100%;
@@ -302,6 +305,42 @@
                                 background-color: rgba(128, 128, 128, 0.41);
                                 margin: 0px 2px;
                             }
+                        }
+                    }
+                }
+
+                .category-dropdown {
+                    width: 100%;
+                    margin-top: 20px;
+                    display: flex;
+                    flex-direction: column;
+
+                    .form-label {
+                        font-size: 1.6em;
+                    }
+
+                    select {
+                        border: 2px rgba(0, 0, 0, 0.049) solid;
+                        width: 100%;
+                        border-radius: 10px;
+                        height: 48px;
+                        font-size: 16px;
+                        overflow-x: hidden;
+                        color: rgb(0, 0, 0);
+
+                        .select-category {
+                            width: 100%;
+                            background: white;
+                            border-radius: 10px;
+                            padding: 12px;
+                        }
+
+                        &:hover {
+                            border: 2px rgba(0, 0, 0, 0.694) solid;
+                        }
+
+                        &:focus {
+                            border: 1px #29abe2 solid;
                         }
                     }
                 }
