--- a/src/app/kanban-add-overlay/kanban-add-overlay.component.html
+++ b/src/app/kanban-add-overlay/kanban-add-overlay.component.html
@@ -134,9 +134,9 @@
 					<div class="kanban-overlay-subtask">
 						<span class="subtask-span">Subtask</span>
 						<div class="subtaskfield" (click)="$event.stopPropagation();">
-							<input [(ngModel)]="subtaskString" type="text" (focus)="isInputFocused = true">
+							<input [(ngModel)]="subtaskString" type="text" (focus)="isInputFocused = true" (blur)="handleBlur()">
 							@if(!isInputFocused){
-							<div class="add">
+							<div class="add" (click)="setFocusOnInput()">
 								<img src="assets/img/kanban-edit-overlay/plus-zichen.svg" alt="" />
 							</div>
 							}@else {
