--- a/src/app/kanban/kanban-add/kanban-add.component.html
+++ b/src/app/kanban/kanban-add/kanban-add.component.html
@@ -146,9 +146,9 @@
                                 <div class="kanban-overlay-subtask">
                                     <span class="subtask-span">Subtask</span>
                                     <div class="subtaskfield" (click)="$event.stopPropagation();">
-                                        <input (keydown)="onKeydown($event)" name="subtaskInput" [(ngModel)]="subtaskString" type="text" (focus)="isInputFocused = true">
+                                        <input (keydown)="onKeydown($event)" name="subtaskInput" [(ngModel)]="subtaskString" type="text" (focus)="isInputFocused = true" (blur)="handleBlur()">
                                         @if(!isInputFocused){
-                                        <div class="add">
+                                        <div class="add" (click)="setFocusOnInput()">
                                             <img src="assets/img/kanban-edit-overlay/plus-zichen.svg" alt="" />
                                         </div>
                                         }@else {
