added Html structure
html structure for signup overlay

--- a/src/app/signup-overlay/signup-overlay.component.html
+++ b/src/app/signup-overlay/signup-overlay.component.html
@@ -1,1 +1,30 @@
-<p>signup-overlay works!</p>
+<section>
+  <div class="content">
+    <div class="signup-container">
+      <div class="signup-title">
+        <img src="assets/img/info-screen/arrow-left-line.png" alt="Back Button">
+        <h1>Sign up</h1>
+        <div class="title-line"></div>
+      </div>
+      <div class="signup-form">
+        <form>
+          <input type="text" placeholder="Name" name="name">
+          <input type="email" placeholder="Email" name="email">
+          <input type="password" placeholder="Password" name="password">
+          <button class="signup-button">Sign up</button>
+        </form>
+      </div>
+      <div class="required checkbox-privacy">
+        <label class="custom-checkbox">
+          <input type="checkbox" id="privacy" name="privacy" required />
+          <span class="checkmark"></span>
+          I accept the
+          <a href="/privacy" target="_blank">
+            Privacy policy</a>
+        </label>
+        <span class="error-text">You must accept the Privacy policy</span>
+      </div>
+      <button class="register-button">Sign up</button>
+    </div>
+  </div>
+</section>
