--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,27 +1,33 @@
 <section>
   <div class="content">
     <div class="background-content">
-     <img src="assets/img/header/Logo.png" alt="Logo Join">
-     <p>Not a Join User?</p>
-     <button class="register-button">Sign up</button>
-     <footer>
-        <a routerLink="/privacy">Privacy Policy</a>
-        <a routerLink="/legalNotice">Legal notice</a>
-    </footer>
+      <img src="assets/img/header/Logo.png" alt="Logo Join">
+      <div class="login-nav">
+        <p>Not a Join User?</p>
+        <button class="register-button">Sign up</button>
+      </div>
     </div>
     <div class="login-overlay">
       <div class="login-title">
-        <h1>Login</h1>
+        <h1>Log in</h1>
         <div class="title-line"></div>
       </div>
       <div class="login-form">
         <form>
           <input type="email" placeholder="Email" name="email">
           <input type="password" placeholder="Password" name="password">
-          <button class="login-button">Login</button>
-          <button class="guest-button">Guest Log in</button>
+          <div class="form-btn">
+            <button class="login-button">Login</button>
+            <button class="guest-button">Guest Log in</button>
+          </div>
         </form>
       </div>
     </div>
+    <footer>
+      <div class="footer-content">
+        <a routerLink="/privacy">Privacy Policy</a>
+        <a routerLink="/legalNotice">Legal notice</a>
+      </div>
+    </footer>
   </div>
 </section>
