--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -24,6 +24,24 @@ section {
                 align-items: center;
                 width: 100%;
                 gap: 1.5em;
+
+                .register-button {
+                    color: white;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    background-color: #2a3647;
+                    border: solid rgba(0, 0, 0, 0.049) 2px;
+                    border-radius: 10px;
+                    font-size: 16px;
+                    padding: 10px 18px;
+                    transition: box-shadow 0.3s ease;
+
+                    &:hover {
+                        background-color: #29abe2;
+                        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+                    }
+                }
             }
         }
 
@@ -96,6 +114,11 @@ section {
                             font-weight: 600;
                             padding: 10px 18px;
                             transition: box-shadow 0.3s ease;
+
+                            &:hover {
+                                background-color: #29abe2;
+                                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+                            }
                         }
 
                         .guest-button {
@@ -110,6 +133,12 @@ section {
                             font-weight: 600;
                             padding: 8px 10px;
                             transition: box-shadow 0.3s ease;
+
+                            &:hover {
+                                color: #29abe2;
+                                border: 2px #29abe2 solid;
+                                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+                            }
                         }
                     }
                 }
