implemented login authentication using firebase authentication

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,11 +13,14 @@
         <div class="title-line"></div>
       </div>
       <div class="login-form">
-        <form>
-          <input type="email" placeholder="Email" name="email">
-          <input type="password" placeholder="Password" name="password">
+        <form [formGroup]="form" (ngSubmit)="onSubmit()">
+          <input type="email" placeholder="Email" formControlName="email">
+          @if(errorMessage){
+            <div>{{errorMessage}}</div>
+          }
+          <input type="password" placeholder="Password" formControlName="password">
           <div class="form-btn">
-            <button class="login-button">Login</button>
+            <button type="submit" class="login-button">Login</button>
             <button class="guest-button">Guest Log in</button>
           </div>
         </form>
